Fixed the height/width issue for boxes with varying lengths of text, forced them to vertical-align: top;

--- a/style.css
+++ b/style.css
@@ -325,10 +325,20 @@ main.wrap {
   text-align: center;
   padding: 1.5rem 2rem;
   box-shadow: var(--shadow);
-  display: inline-table;
+  display: inline-block;
   width: 300px;
   height: 300px;
   margin: 2em;
+  word-break: break-word;
+  vertical-align: top;
+}
+.archive .box {
+  display: inline-block;
+  min-width: 300px;
+  width: auto;
+  max-width: 25%;
+  height: auto;
+  min-height: 300px;
 }
 
 a:hover .box {
@@ -387,7 +397,7 @@ form.wpcf7-form p.story {
 section.grey-area h2,
 section.boxes h2 {
   text-align: center;
-  font-size: 1.9rem;
+  font-size: 1.4em;
   text-transform: uppercase;
 }
 
@@ -395,14 +405,12 @@ section.boxes h2 {
   color: var(--Deep_Apricot);
   font-family: 'Krona One', sans-serif;
   font-size: 1.6em;
+  text-transform: uppercase;
+  margin-bottom: 1em;
 }
 
 .box img {
   margin-bottom: 2em;
-}
-
-.box h3 {
-  margin-bottom: 1em;
 }
 
 .action p {
